--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,13 @@
 [project]
 name = "jacobs-jinja-too"
-version = "0.0.9"
+version = "0.2.0"
 authors = [
   { name="Jacob Brunson", email="pypi@jacobbrunson.com" },
 ]
 description = "Simple wrapper around jinja2 templating"
 readme = "README.md"
-requires-python = ">=3.7"
-license = { text = "GPLv2" }
+requires-python = ">=3.9"
+license = "LGPL-2.0"
 dependencies = [
     "jinja2>=3.1.6",
     "stringcase>=1.2.0",
@@ -19,8 +19,3 @@ Homepage = "http://github.com/pearmaster/jacobs-jinja-too"
 [build-system]
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
-
-[[tool.uv.index]]
-name = "testpypi"
-url = "https://test.pypi.org/legacy/"
-publish-url = "https://test.pypi.org/legacy/"
