--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,3 +19,11 @@ Homepage = "http://github.com/pearmaster/jacobs-jinja-too"
 [build-system]
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
+
+[tool.pytest.ini_options]
+pythonpath = ["."]
+
+[dependency-groups]
+dev = [
+    "pytest>=8.4.1",
+]
