--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "jacobs-jinja-too"
-version = "0.2.0"
+version = "0.2.3"
 authors = [
   { name="Jacob Brunson", email="pypi@jacobbrunson.com" },
 ]
@@ -9,6 +9,7 @@ readme = "README.md"
 requires-python = ">=3.9"
 license = "LGPL-2.0"
 dependencies = [
+    "jinja-markdown>=1.210911",
     "jinja2>=3.1.6",
     "stringcase>=1.2.0",
 ]
